# dbRIP-API

./: .dockerignore  .gitignore  .readme.md.swp  Dockerfile  GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATIONS.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  readme.md  render.yaml
.github/workflows/: build-trackhub.yml  docker.yml
alembic/: README.md
app/: database.py  main.py
app/routers/: datasets.py  export.py  insertions.py  stats.py
assets/: index-BvZj30_f.css  index-CI2cyafD.js  index-D3b0hbbw.css  index-DmLfMHXY.js  index-hr9xA5T-.js  index-sQmk1znJ.css
cli/: dbrip.py
docs/: api-reference.md  biology.md  cli.md  index.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DataTable.test.tsx  DataTable.tsx  TokenSearchBar.tsx
frontend/src/constants/: filters.ts
frontend/src/hooks/: useInsertions.ts
frontend/src/pages/: ApiRef.tsx  BatchSearch.test.tsx  BatchSearch.tsx  CliRef.tsx  FileSearch.tsx  IgvViewer.tsx  InteractiveSearch.test.tsx  InteractiveSearch.tsx  McpRef.tsx
frontend/src/types/: igv.d.ts
frontend/src/utils/: genomeBrowserHelpers.test.ts  genomeBrowserHelpers.ts
hub/: .build_meta.json  hub.txt
hub/hg38/: dbRIP.html  trackDb.txt
ingest/: dbrip.py
mcp/: README.md  package.json  server.ts  tsconfig.json
mcp/tools/: datasets.ts  insertions.ts  stats.ts
tests/: test_cli.py
