[project]
name = "dbrip-api"
version = "0.1.0"
description = "Read-only API for the dbRIP database of retrotransposon insertion polymorphisms"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dbrip = "cli.dbrip:app"

[project.optional-dependencies]
cli = [
    "typer[all]>=0.12",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]
ingest = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
]
trackhub = [
    # httpx is used by scripts/build_trackhub.py to stream BED exports from the API.
    # Install this group when running the track hub build pipeline:
    #   pip install -e ".[trackhub]"
    "httpx>=0.27",
]
# Convenience group to install all functional components
all = [
    "dbrip-api[cli,api,ingest,trackhub]",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*", "ingest*", "cli*", "mcp*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100